# staubli_support

./: CMakeLists.txt  package.xml
launch/: display.launch
meshes/LMI_sensor/: HDIScanner.STL
meshes/grippers/bar_ball/: gripper.STL
meshes/grippers/mCustom1/: arch.STL  gripper1.STL  gripper2.STL
meshes/robot/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL
meshes/test_objects/: crown.stl
rviz/: display.rviz
urdf/: world.xacro
urdf/robot/: staubli_robot.xacro  staubli_robot.xacro.autosave
urdf/workcell/: workcell.xacro
